# locus

./: Cargo.toml  PHASE_A_PLAN.md
examples/: pythagoras_step1.rs  typst_bisect.rs  typst_zeta.rs  typst_zeta_log_tree.rs  typst_zeta_state.rs  vector_text_ascii.rs  vector_text_ascii_state.rs
src/: lib.rs  main.rs
src/anim/: mod.rs
src/font/: db.rs  mod.rs  outline.rs  resolve.rs  tessellate.rs  text.rs
src/render/: app.rs  gpu.rs  mesh_renderer.rs  mod.rs  primitives.rs  util.rs
src/render/shaders/: placeholder.wgsl  solid_mesh.wgsl
src/scene/: mod.rs
src/typst/: math.rs  mod.rs
src/typst/demo/: mod.rs
src/typst/engine/: extract.rs  mod.rs  world.rs
src/typst/render/: mod.rs
