[package]
name = "locus"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.8"
wgpu = "28.0.0"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
lyon = "1.0"

# Typst parsing (for parsing `#rect(...)` and reading its arguments from the AST)
typst-syntax = "0.14"
typst-utils = "0.14"
ecow = "0.2"

# Typst engine: evaluate + layout into Frames (text, math, shapes)
typst = "0.14"

# Typst compilation infrastructure (needed for implementing a custom World)
comemo = "0.4"

# Embedded fonts used by Typst itself (stable Phase A baseline: no system scan required).
# NOTE: `typst-assets` ships the actual embedded font bytes behind the `fonts` feature.
typst-assets = { version = "0.14", features = ["fonts"] }

# Font discovery & parsing (vector outlines)
fontdb = "0.21"

# IMPORTANT:
# Typst 0.14 pulls in a newer `ttf-parser` than our previous direct dependency.
# We align our direct dependency to Typst's version to avoid trait/type mismatches
# (e.g. `ttf_parser::OutlineBuilder`, `ttf_parser::GlyphId`) when mixing Typst font faces
# with our own outline extraction code.
ttf-parser = "0.25.1"

# Optional helpers you'll likely want soon:
# - once_cell: global fontdb cache
# - anyhow: ergonomic error handling while bootstrapping the pipeline
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
